--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -20,6 +20,8 @@ html {
     scroll-padding-top: 6rem;
     overflow-x: hidden;
 }
+
+/* css for the navbar header */
 header {
     position: fixed;
     top: 0;
@@ -30,7 +32,8 @@ header {
     align-items: center;
     justify-content: space-between;
     z-index: 1000;
-    box-shadow: 0 .5rem 1rem rgba(0.0, 0, .1)
+    box-shadow: 0 .5rem 1rem rgba(0.0, 0, .1);
+    background-color: #976ebd; 
 }
 
 header .logo {
@@ -56,7 +59,7 @@ header .navbar a:hover {
 header .icons a {
     font-size: 2.5rem;
     color: #333;
-    margin-left: 1.5rem;
+    margin-right: 150px;
 }
 
 header .icons a:hover {
@@ -77,7 +80,7 @@ header .fa-bars {
     display: none
 }
 
-/* navbar slider */
+/* navbar slider  starts here*/
 .sub-menu-wrap {
     position: absolute;
     top: 100%;
@@ -153,14 +156,18 @@ header .fa-bars {
 
 .sub-menu-link:hover p {
     font-weight: 600;
-} 
-
-/* navbar slider end*/
-
-section{
-    padding:2rem 9%;
 }
-.btn{
+
+/* navbar slider end here*/
+/* navbar header css end here */
+
+
+/*section css starts here */
+section {
+    padding: 2rem 9%;
+}
+
+.btn {
     display: inline-block;
     margin-top: 1rem;
     border-radius: 5rem;
@@ -170,41 +177,256 @@ section{
     cursor: pointer;
     font-size: 1.7rem;
 }
-.btn:hover{
+
+.btn:hover {
     color: var(--white);
 }
 
-.home{
+/* the hero banner css starts here*/
+
+.home {
     display: flex;
     align-items: center;
     min-height: 100vh;
-    background:url(../../public/assets/shoes.jpg)no-repeat;
+    background: url(../../public/assets/shoes.jpg)no-repeat;
     background-size: cover;
     background-position: center;
 }
-.home .content{
+
+.home .content {
     max-width: 50rem;
 }
-.home .content h3{
+
+.home .content h3 {
     font-size: 6rem;
     color: #333;
 }
-.home .content span{
+
+.home .content span {
     font-size: 3.5rem;
-    color:var(--white);
+    color: var(--white);
     padding: 1rem 0;
     line-height: 1.5;
 }
-.home .content p{
+
+.home .content p {
     font-size: 1.5rem;
-    color:#999;
+    color: #999;
     padding: 1rem 0;
     line-height: 1.5;
 }
 
+/* the hero banner css ends here */
+
+/* the about css starts here*/
+.heading {
+    text-align: center;
+    font-size: 4rem;
+    color: #333;
+    padding: 1rem;
+    margin: 2rem 0;
+    background: rgba(255, 51, 153, .05);
+}
+
+.heading span {
+    color: var(--white);
+}
+
+.about .row {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    padding-bottom: 3rem;
+}
+
+.about .row .image-container {
+    flex: 1 1 40rem;
+    position: relative;
+}
+
+.about .row .image-container img {
+    width: 100%;
+    border: 1.5rem solid #fff;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem 1rem rgba(0.0, 0, .1);
+    height: 100%;
+    object-fit: cover;
+}
+
+.about .row .image-container h3 {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 3rem;
+    background: #fff;
+    width: 100%;
+    padding: 1rem 2rem;
+    text-align: center;
+    mix-blend-mode: screen;
+}
+
+.about .row .content {
+    flex: 1 1 40rem;
+}
+
+.about .row .content h3 {
+    font-size: 3rem;
+    color: #333;
+}
+
+.about .row .content p {
+    font-size: 1.5rem;
+    color: #999;
+    padding-top: 1rem;
+    line-height: 1.5;
+}
+
+/*the about css ends here*/
+
+/* icons css start here */
+
+.icons-container{
+    background: #eee;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.icons-container .icon{
+background: #fff;
+border: .1rem solid rgba(0.0, 0, .1);
+padding: 2rem;
+display: flex;
+align-items: center;
+flex: 1 1 25rem;
+}
+.icons-container .icon img{
+    height: 5rem;
+    margin-right: 2rem;
+}
+.icons-container .icon h3{
+    color: #333;
+    padding-bottom: .5rem;
+    font-size: 1.5rem;
+}
+.icons-container .icon span{
+    color: #555;
+    font-size: 1.5rem;
+}
+
+/* icons css ends here */
+
+/* products css starts here */
+
+.products .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.products .box-container .box{
+    flex:1 1 35rem;
+    box-shadow:0 .5rem 1.5rem rgba(0.0, 0, .1);
+    border-radius:.5rem;
+    border: .1rem solid rgba(0.0, 0, .1);
+    position: relative;
+
+}
+.products .box-container .box .discount{
+    position: absolute;
+    top: 1rem ;
+    left: 1rem;
+    padding: 7rem 1rem;
+    font-size: 2rem;
+    color: var(--white);
+    background: rgba(255, 51, 153, 0.05);
+    z-index: 1;
+    border-radius: .5rem;
+}
+.products .box-container .box .image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   position:relative;
+   text-align:center;
+   padding-top: 2rem;
+   overflow:hidden;
+}
+.products .box-container .box .image img{
+    height: 25rem; 
+}
+.products .box-container .box:hover .image img{
+   transform: scale(1.1);
+}
+.products .box-container .box .image .icons{
+    position: absolute;
+    bottom: -7rem;
+    left: 0;
+    right: 0;
+    display: flex;
+}
+
+.products .box-container .box:hover .image .icons{
+    bottom: 0;
+}
+
+.products .box-container .box .image .icons a{
+    height: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    width: 50%;
+    background-color: var(--white);
+    color: #fff;
+}
+
+.products .box-container .box .image .icons .cart-btn{
+    border-left: .1rem solid #fff7;
+    border-right: .1rem solid #fff7;
+    width: 100%;
+}
+.products .box-container .box .image .icons a:hover{
+    background: #333;
+}
+
+.products .box-container .box .content{
+    padding: 2rem;
+    text-align: center;
+}
+.products .box-container .box .content h3{
+    font-size: 2.5rem;
+    color: #333;
+}
+
+.products .box-container .box .content .price{
+    font-size: 2.5rem;
+    color: var(--white);
+    font-weight: bolder;
+    padding-top: 1rem;
+}
+.products .box-container .box .content .price span{
+    font-size: 1.5rem;
+    color: #999;
+    font-weight: lighter;
+    padding-top: 1rem;
+    text-decoration: line-through;
+}
+/* products css ends here */
+
+/* create product css starts here */
+
+.test{
+    padding: 50px;
+}
+
+/* create product css ends here */
 
 
-/* media queries */
+
+/* media queries  starts here*/
 @media (max-width:991px) {
     html {
         font-size: 55%;
@@ -213,10 +435,12 @@ section{
     header {
         padding: 2rem;
     }
-    section{
+
+    section {
         padding: 2rem;
     }
-    .home{
+
+    .home {
         background-position: left;
     }
 }
@@ -248,13 +472,21 @@ section{
         border: .1rem solid rgba(0.0, 0, .1);
         display: block;
     }
-    .home .content h3{
+
+    .home .content h3 {
         font-size: 5rem;
 
     }
-    .home .content span{
+
+    .home .content span {
         font-size: 2.5rem;
-        
+
+    }
+    .icons-container .icon h3{
+        font-size: 2rem;
+    }
+    .icons-container .icon span{
+        font-size: 1.7rem;
     }
 }
 
@@ -263,246 +495,9 @@ section{
         font-size: 50%;
     }
 
-    header {
-        padding: 2rem;
+    .heading {
+        font-size: 3rem;
     }
 }
 
-/* Navigation bar css Start*/
-/* nav {
-    background-color: #1a1a1a;
-    width: 100%;
-    padding: 10px 10%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-}
-
-.logo {
-    width: 120px;
-}
-
-.user-pic {
-    width: 40px;
-    border-radius: 50%;
-    cursor: pointer;
-    margin-left: 30px;
-}
-
-nav ul {
-    width: 100%;
-    text-align: right;
-}
-
-nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.sub-menu-wrap {
-    position: absolute;
-    top: 100%;
-    right: 10%;
-    width: 320px;
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height 0.5s;
-
-}
-
-.sub-menu-wrap.open-menu {
-    max-height: 400px;
-}
-
-.sub-menu {
-    background: #fff;
-    padding: 20px;
-    margin: 10px;
-}
-
-.user-info {
-    display: flex;
-    align-items: center;
-}
-
-.user-info h3 {
-    font-weight: 500;
-}
-
-.user-info img {
-    width: 60px;
-    border-radius: 50%;
-    margin-right: 15px;
-}
-
-.sub-menu hr {
-    border: 0;
-    height: 1px;
-    width: 100%;
-    background: #ccc;
-    margin: 15px 0 10px;
-}
-
-.sub-menu-link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #525252;
-    margin: 12px 0;
-}
-
-.sub-menu-link p {
-    width: 100%;
-}
-
-.sub-menu-link img {
-    width: 40px;
-    background: #e5e5e5;
-    border-radius: 50%;
-    padding: 8px;
-    margin-right: 15px;
-}
-
-.sub-menu-link span {
-    font-size: 22px;
-    transition: transform 0.5s;
-}
-
-.sub-menu-link:hover span {
-    transform: translateX(5px);
-}
-
-.sub-menu-link:hover p {
-    font-weight: 600;
-} */
-
-/* Navigation bar css end */
-
-/* product card css */
-
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;700;900&family=Raleway:wght@100;300;500;700&display=swap');
-
-:root {
-    --bodyBack: #ffeaed;
-    --textColor: #1b2741;
-    --starColor: #f67034;
-    --sectionBack: #f7f6f9;
-}
-
-.container {
-    width: 60vw;
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.header {
-    width: 100%;
-    text-align: center;
-}
-
-.header h1 {
-    font-size: 4em;
-    text-transform: uppercase;
-    color: var(--textColor);
-}
-
-.products {
-    width: 100%;
-    align-self: center;
-    height: 70%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 40px;
-}
-
-.product {
-    position: relative;
-    background-color: var(--sectionBack);
-    width: 350px;
-    height: 100%;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, .3);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px 20px 40px;
-    border-radius: 10px;
-    transition: .3s;
-}
-
-.product:hover {
-    transform: translateY(-15px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-}
-
-.image {
-    width: 100%;
-    height: 60%;
-    display: grid;
-    place-content: center;
-}
-
-.image img {
-    width: 150px;
-}
-
-.namePrice {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.namePrice h3 {
-    font-size: 2em;
-    text-transform: capitalize;
-    color: var(--textColor);
-}
-
-.namePrice span {
-    font-size: 1.5em;
-    color: var(--starColor);
-}
-
-.product p {
-    font-size: 18px;
-    line-height: 65px;
-}
-
-.stars svg {
-    font-size: 1.3em;
-    color: var(--starColor);
-}
-
-.bay {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-}
-
-.bay button {
-    padding: 10px 20px;
-    border-radius: 7px;
-    border: none;
-    background-color: var(--textColor);
-    color: var(--sectionBack);
-    font-size: 18px;
-    text-transform: capitalize;
-    cursor: pointer;
-    transition: .5s;
-}
-
-.bay button:hover {
-    transform: scale(1.1);
-}
-
-/* end of product css */
+/*media queries ends here */
