--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -298,7 +298,7 @@ section {
 
 .icons-container .icon{
 background: #fff;
-border: .1rem solid rgba(0.0, 0, .1);
+border: .1rem solid rgba(0,0, 0, .1);
 padding: 2rem;
 display: flex;
 align-items: center;
@@ -330,9 +330,9 @@ flex: 1 1 25rem;
 
 .products .box-container .box{
     flex:1 1 35rem;
-    box-shadow:0 .5rem 1.5rem rgba(0.0, 0, .1);
+    box-shadow:0 .5rem 1.5rem rgba(0,0, 0, .1);
     border-radius:.5rem;
-    border: .1rem solid rgba(0.0, 0, .1);
+    border: .1rem solid rgba(0,0, 0, .1);
     position: relative;
 
 }
@@ -415,6 +415,101 @@ flex: 1 1 25rem;
     text-decoration: line-through;
 }
 /* products css ends here */
+
+/* contact us css starts here*/
+
+.contact .row{
+    display: flex;
+    flex-wrap: wrap-reverse;
+    gap: 1.5rem;
+    align-items: center;
+}
+.contact .row form{
+    flex: 1 1 40rem;
+    padding: 2rem 2.5rem;
+    box-shadow: 0 .5rem 1.5rem rgba(0,0, 0, .1);
+    border:.1rem solid rgba(0,0, 0, .1);
+    background: #fff;
+    border-radius: .5rem;
+}
+.contact .row .image{
+    flex: 1 1 40rem;
+}
+.contact .row .image img{
+   width: 100%;
+}
+.contact .row form .box{
+    padding:1rem;
+    font-size:1.7rem;
+    color: #333;
+    text-transform:none;
+    border: .1rem solid rgba(0,0, 0, .1);
+    border-radius:.5rem;
+    margin:.7rem 0;
+    width: 100%;
+}
+.contact .row form .box:focus{
+border-color: var(--white);
+}
+.contact .row form textarea{
+    height: 15rem;
+    resize: none;
+}
+
+/* contact us css ends here */
+
+/* footer css starts here */
+
+.footer .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.footer .box-container .box{
+    flex: 1 1 25rem;
+
+}
+
+.footer .box-container .box h3{
+   color: #333;
+   font-size: 2.5rem;
+   padding: 1rem 0;
+}
+
+.footer .box-container .box a{
+    display: block;
+    color: #666;
+    font-size: 1.5rem;
+    padding: 1rem 0;
+ }
+
+ .footer .box-container .box a:hover{
+    color: var(--white);
+    text-decoration: underline;
+ }
+
+ .footer .box-container .box img{ 
+    margin-top: 1rem;
+    height: 4rem;
+ }
+ .footer .credit{
+    text-align: center;
+    padding: 1.5rem;
+    margin-top: 1.5rem;
+    padding-top: 2.5rem;
+    font-size: 2rem;
+    color: #333;
+    border-top: .1rem solid rgba(0,0, 0, .1);
+ }
+
+ .footer .credit span{
+    color: var(--white);
+ }
+
+
+/*  footer css ends here */
+
 
 /* create product css starts here */
 
