--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,5 +1,6 @@
 :root {
     --white: #976ebd;
+    --font: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 * {
@@ -512,16 +513,26 @@ border-color: var(--white);
 
 /* cart css starts here */
 .table-parent{
+    width:100%;
    display:flex;
-   justify-content: space-between;
-   margin-top: 100px;
-   padding: 30px;
+   justify-content:center;
+   align-items: center;
+   margin-top:50px;
+   padding: 20px 100px;
+}
+.tableif-parent{
+    width: 100%;
+    display:flex;
+    justify-content:space-between;
+    
+    
 }
 .table{
-    padding: 10px;
-    width:75%;
+    padding: 20px;
+    width:65%;
     display: flex;
-    flex-direction: column;box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    flex-direction: column;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
 }
 .table-header{
@@ -598,6 +609,49 @@ border-color: var(--white);
     height: 1px;
     background-color:rgba(0, 0, 0, .1);
 }
+.empty-parent{
+    box-shadow:rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    padding:40px;
+    width:80vw;
+    height:60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.empty{
+    padding: 20px;
+    height:400px;
+    width: 400px;
+    font-size: var(--font);
+    font-size: 12px;
+    font-weight: 600;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.empty p{
+    padding:10px;
+}
+.start-shopping{
+    margin-top: 20px;
+    padding: 14px 14px;
+    background-color: yellow;
+    border-radius: 10px;
+    font-size: 17px;
+}
+.emptyp1{
+    font-size: 17px;
+}
+.emptycart{
+    margin-bottom: 10px;
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+
+}
 
 
 /*cart css ends here */
@@ -632,7 +686,7 @@ border-color: var(--white);
 }
 
 @media (max-width:768px) {
-
+    
     html .fa-bars {
         display: block;
     }
@@ -674,6 +728,30 @@ border-color: var(--white);
     .icons-container .icon span{
         font-size: 1.7rem;
     }
+    .table-parent{
+        padding: 10px 10px;
+    }
+    .tableif-parent{
+        margin-top: 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .table{
+    
+        width: 100%;
+
+    }
+    .checkout{
+        margin:5% 0;
+        width: 100%;
+    }
+    .empty-parent{
+        width: 100%;
+    }
+
 }
 
 @media (max-width:450px) {
