--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -56,7 +56,7 @@
     font-size: 1.1rem;
 }
 
-.sidebar-menu a.active {
+.sidebar-menu a:hover {
     background: #fff;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -110,6 +110,7 @@
     transition: margin-left 300ms;
     margin-left: 345px;
 }
+
 .admin {
     background: #fff;
     display: flex;
@@ -132,6 +133,7 @@
     font-size: 1.7rem;
     padding-right: 1rem;
 }
+
 .search-wrapper {
     border: 1px solid #ccc;
     border-radius: 30px;
@@ -140,42 +142,50 @@
     align-items: center;
     overflow-x: hidden;
 }
+
 .search-wrapper span {
     display: inline-block;
     padding: 0rem 1rem;
     font-size: 1.6rem;
 }
+
 .search-wrapper input {
     height: 100%;
     padding: .5rem;
     border: none;
     outline: none;
 }
+
 .user-wrapper {
     display: flex;
     align-items: center;
 }
+
 .user-wrapper img {
     border-radius: 50%;
     margin-right: 1rem;
 }
+
 .user-wrapper small {
     display: inline-block;
     color: var(--text-grey);
     margin-top: 10px !important;
 }
+
 .admin-main {
     margin-top: 85px;
     padding: 2rem 1.5rem;
     background: #f1f5f9;
     min-height: calc(100vh -90px);
 }
+
 .cards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
     margin-top: 1rem;
 }
+
 .card-single {
     display: flex;
     justify-content: space-between;
@@ -183,28 +193,34 @@
     padding: 2rem;
     border-radius: 2px;
 }
+
 .card-single div:last-child span {
     font-size: 3rem;
     color: var(--main-color);
 
 }
+
 .card-single div:first-child {
     color: var(--text-grey);
 }
+
 .card-single:last-child {
     background-color: var(--main-color);
 }
+
 .card-single:last-child h1,
 .card-single:last-child div:first-child span .card-single:last-child div:last-child span {
     color: #fff;
 
 }
+
 .recent-grid {
     margin-top: 3.5rem;
     display: grid;
     grid-template-columns: 65% auto;
     gap: 2rem;
 }
+
 .card {
     background: #fff;
     border-radius: 5px;
@@ -213,12 +229,14 @@
 .card-header {
     padding: 1rem;
 }
+
 .card-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #f0f0f0;
 }
+
 .card-header button {
     background: var(--main-color);
     border-radius: 10px;
@@ -227,6 +245,7 @@
     padding: .5rem 1rem;
     border: 1px solid var(--main-color);
 }
+
 table {
     border-collapse: collapse;
 }
@@ -393,6 +412,82 @@ tr td:last-child {
 
 /* navbar slider end here*/
 
+/* product page */
+
+.test {
+    margin-top: 70px;
+    padding: 20px;
+    width: 100%;
+}
+
+.admin-product-title {
+    text-align: center;
+    font-size: 24px;
+}
+
+.admin-create-btn {
+    margin: 10px 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.admin-create-a {
+    padding: 8px 16px;
+    background-color: orange;
+    border-radius: 20px;
+}
+
+.admin-product-head {
+    display: flex;
+    justify-content: space-between;
+    /* margin: 10px; */
+}
+
+.admin-product-head div {
+    width: 200px;
+    height: 40px;
+    padding: 5px;
+    font-weight: 600;
+  
+}
+
+.admin-product-body-main {
+    display: flex;
+    justify-content: space-between;
+  /*   margin: 10px; */
+  margin-top: 10px;
+    height: 150px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+.admin-product-body-main .div {
+    display: flex;
+    height: 130px;
+    width: 200px;
+    padding: 20px;
+    align-items: center;
+}
+
+.admin-action {
+    display: flex;
+    justify-content: space-between;
+}
+
+.admin-edit-btn {
+    padding: 8px 16px;
+    background-color: orange;
+    border-radius: 10px;
+}
+
+.admin-line{
+    height: 1px;
+    content: "";
+    background-color: rgb(211, 195, 195);
+}
+
+/* product page */
+
 @media only screen and(max-width: 1200px) {
     .sidebar {
         width: 70px;
@@ -422,7 +517,7 @@ tr td:last-child {
         left: 70px;
     }
 
-  
+
 }
 
 @media only screen and (max-width: 960px) {
@@ -472,47 +567,48 @@ tr td:last-child {
         justify-content: center !important;
     }
 
-    .admin h2 span{
-     text-align: center;
-     padding-right: 0rem;
+    .admin h2 span {
+        text-align: center;
+        padding-right: 0rem;
     }
 
-    .admin h2{
+    .admin h2 {
         font-size: 1.1rem;
     }
 
-    .main-content{
-       width: 100%;
-       margin-left: 0rem; 
+    .main-content {
+        width: 100%;
+        margin-left: 0rem;
     }
 
-    .admin{
+    .admin {
         width: 100% !important;
         left: 0 !important;
     }
 
-    #nav-toggle:checked + .sidebar{
+    #nav-toggle:checked+.sidebar {
         left: 0 !important;
         z-index: 100;
         width: 345px;
     }
 
 
-    #nav-toggle:checked + .sidebar .sidebar-brand,
-    #nav-toggle:checked +.sidebar li {
+    #nav-toggle:checked+.sidebar .sidebar-brand,
+    #nav-toggle:checked+.sidebar li {
         padding-left: 1rem;
         text-align: left;
     }
 
-    #nav-toggle:checked +.sidebar li a {
+    #nav-toggle:checked+.sidebar li a {
         padding-left: 1rem;
     }
 
-    #nav-toggle:checked + .sidebar .sidebar-brand h2 span:last-child,
-    #nav-toggle:checked + .sidebar li a span:last-child {
+    #nav-toggle:checked+.sidebar .sidebar-brand h2 span:last-child,
+    #nav-toggle:checked+.sidebar li a span:last-child {
         display: inline;
     }
-    #nav-toggle:checked ~.main-content{
+
+    #nav-toggle:checked~.main-content {
         margin-left: 0rem !important;
     }
 }
