--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -412,7 +412,7 @@ tr td:last-child {
 
 /* navbar slider end here*/
 
-/* product page */
+/* product view page */
 
 .test {
     margin-top: 70px;
@@ -449,14 +449,14 @@ tr td:last-child {
     height: 40px;
     padding: 5px;
     font-weight: 600;
-  
+
 }
 
 .admin-product-body-main {
     display: flex;
     justify-content: space-between;
-  /*   margin: 10px; */
-  margin-top: 10px;
+    /*   margin: 10px; */
+    margin-top: 10px;
     height: 150px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
@@ -480,13 +480,78 @@ tr td:last-child {
     border-radius: 10px;
 }
 
-.admin-line{
+.admin-line {
     height: 1px;
     content: "";
     background-color: rgb(211, 195, 195);
 }
 
-/* product page */
+/* product view page */
+
+/* product create page */
+.admin-create {
+    margin-top: 70px;
+    padding: 20px;
+    width: 100%;
+    height: 86vh;
+}
+
+.admin-create-title {}
+
+.admin-create-form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.admin-create-form {
+    height: 500px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+.admin-create-p {
+    text-align: center;
+    margin: 15px 0;
+    font-weight: 600;
+}
+
+.admin-create-form div {
+    display: flex;
+    justify-content: space-between;
+    margin: 15px 0;
+}
+
+.admin-create-form form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.admin-input {
+    width: 60%;
+}
+
+.admin-select {
+    width: 60%;
+}
+.admin-create-form button{
+    text-align: center;
+    margin: 20px;
+    padding: 8px 16px;
+    background-color: orange;
+    border-radius: 10px;
+    width: 100%;
+}
+
+
+
+
+
+/* product create page */
 
 @media only screen and(max-width: 1200px) {
     .sidebar {
