--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -540,6 +540,59 @@ header .fa-bars {
     text-decoration: line-through;
 }
 
+.product-head-title{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 70px;
+    align-items: center;
+    background: rgba(255, 51, 153, .05);
+    padding: 20px;
+    margin: 10px 0;
+}
+.product-deals{
+    font-size: 28px;
+}
+.product-deals-btn{
+    padding: 8px 16px;
+    background-color: orange;
+    border-radius: 10px;
+}
+
+.products .box-container .box .icons {
+    /* position: absolute;
+    bottom: -7rem;
+    left: 0;
+    right: 0; */
+    display: flex;
+    text-align: center;
+}
+.products .box-container .box:hover .icons {
+    bottom: 0;
+}
+
+.products .box-container .box .icons a {
+    height: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    width: 50%;
+    background-color: var(--white);
+    color: #fff;
+}
+.products .box-container .box .icons .cart-btn {
+    border-left: .1rem solid #fff7;
+    border-right: .1rem solid #fff7;
+    width: 100%;
+}
+.products .box-container .box .icons a:hover {
+    background: #333;
+}
+.content-desc{
+    font-size: 14px;
+}
+
+
+
 /* products css ends here */
 
 /* contact us css starts here*/
