--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -309,7 +309,7 @@ tr td:last-child {
     align-items: center;
 }
 
-.info img {
+.info i {
     border-radius: 50%;
     margin-right: 1rem;
 }
@@ -363,7 +363,7 @@ tr td:last-child {
     font-weight: 500;
 }
 
-.user-info img {
+.user-info i {
     width: 60px;
     border-radius: 50%;
     margin-right: 15px;
