--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -79,7 +79,7 @@ html {
 
 .sliders {
     padding: 0 50px 0 50px;
-    width: 90%;
+    width: 40%;
     display: flex;
     flex-wrap: wrap-reverse;
     justify-content: space-between;
@@ -88,7 +88,7 @@ html {
 }
 
 .slider-img {
-    /* mix-blend-mode: color-burn; */
+     mix-blend-mode: color-burn; 
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -97,8 +97,8 @@ html {
 
 .slider-image {
     mix-blend-mode: color-burn;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: flex;
     object-fit: cover;
     justify-content: center;
@@ -112,7 +112,6 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-
 
 }
 
